# ha-tools

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  ENTITY_EXPLORER_KNOWLEDGE_EXTRACTION.md  HATOOLS_CLI.md  HA_TOOLS_REFERENCE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
ha_tools/: __init__.py  cli.py  config.py
ha_tools/commands/: __init__.py  common.py  entities.py  errors.py  history.py  logs.py  validate.py
ha_tools/lib/: __init__.py  database.py  output.py  registry.py  rest_api.py  setup_wizard.py  utils.py  yaml_loader.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_cli_integration.py
tests/performance/: __init__.py  test_performance.py
tests/unit/: __init__.py  test_config.py  test_database.py  test_entities_command.py  test_errors_command.py  test_history_command.py  test_logs_command.py  test_output.py  test_rest_api.py  test_utils.py  test_validate_command.py  test_yaml_loader.py
thoughts/shared/plans/: 2025-12-07-fix-test-failures.md  2025-12-10-history-flag-not-working.md  2025-12-14-ha-tools-history-command.md  2025-12-19-code-quality-setup.md
thoughts/shared/research/: 2025-12-03-agents-md-research.md  2025-12-03-cli-vs-docs.md  2025-12-07-test-suite-analysis.md  2025-12-10-cli-global-options-audit.md  2025-12-10-entities-command-implementation.md  2025-12-10-errors-command-implementation.md  2025-12-10-functionality-vs-implementation.md  2025-12-10-validate-command-refactoring.md  2025-12-14-ha-tools-history-command.md  2025-12-19-code-quality-setup.md
